--- a/src/main/java/lagatrix/client/gui/components/complex/panels/ApplicationPanel.form
+++ b/src/main/java/lagatrix/client/gui/components/complex/panels/ApplicationPanel.form
@@ -17,16 +17,13 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="titleLabel" min="-2" pref="387" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="buttonsPanel" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="buttonsPanel" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
