--- a/src/main/java/lagatrix/client/gui/components/complex/panels/ApplicationPanel.form
+++ b/src/main/java/lagatrix/client/gui/components/complex/panels/ApplicationPanel.form
@@ -28,7 +28,7 @@
               <EmptySpace max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Component id="appImage" min="-2" pref="200" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
