--- a/src/main/java/lagatrix/client/gui/components/complex/panels/GPUPanel.form
+++ b/src/main/java/lagatrix/client/gui/components/complex/panels/GPUPanel.form
@@ -33,7 +33,7 @@
               <Component id="nameLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="vendorImage" min="-2" pref="123" max="-2" attributes="0"/>
-              <EmptySpace pref="28" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
