--- a/src/main/java/lagatrix/client/gui/window/MainWindow.form
+++ b/src/main/java/lagatrix/client/gui/window/MainWindow.form
@@ -48,9 +48,8 @@
               <Component id="header" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
                   <Component id="menu" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
                   <Component id="viewsPanel" max="32767" attributes="0"/>
-                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -60,10 +59,7 @@
                   <Component id="header" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="menu" min="-2" max="-2" attributes="0"/>
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
-                          <Component id="viewsPanel" min="-2" pref="552" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="viewsPanel" min="-2" pref="552" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
@@ -91,6 +87,92 @@
           </Properties>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
+          <SubComponents>
+            <Component class="lagatrix.client.gui.views.main.form.MonitoringView" name="monitoringView">
+              <Properties>
+                <Property name="requester" type="lagatrix.client.connection.RequesterManager" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="requester" type="code"/>
+                </Property>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
+                  <CardConstraints cardName="card8"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+            <Component class="lagatrix.client.gui.views.main.form.ActionsView" name="actionsView">
+              <Properties>
+                <Property name="requester" type="lagatrix.client.connection.RequesterManager" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="requester" type="code"/>
+                </Property>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
+                  <CardConstraints cardName="card2"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+            <Component class="lagatrix.client.gui.views.main.form.ApplicationView" name="applicationView">
+              <Properties>
+                <Property name="requester" type="lagatrix.client.connection.RequesterManager" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="requester" type="code"/>
+                </Property>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
+                  <CardConstraints cardName="card3"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+            <Component class="lagatrix.client.gui.views.main.form.ProcessView" name="processView">
+              <Properties>
+                <Property name="requester" type="lagatrix.client.connection.RequesterManager" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="requester" type="code"/>
+                </Property>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
+                  <CardConstraints cardName="card4"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+            <Component class="lagatrix.client.gui.views.main.form.EventView" name="eventView">
+              <Properties>
+                <Property name="requester" type="lagatrix.client.connection.RequesterManager" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="requester" type="code"/>
+                </Property>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
+                  <CardConstraints cardName="card5"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+            <Component class="lagatrix.client.gui.views.main.form.UserView" name="userView">
+              <Properties>
+                <Property name="requester" type="lagatrix.client.connection.RequesterManager" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="requester" type="code"/>
+                </Property>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
+                  <CardConstraints cardName="card6"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+            <Component class="lagatrix.client.gui.views.main.form.PartitionView" name="partitionView">
+              <Properties>
+                <Property name="requester" type="lagatrix.client.connection.RequesterManager" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="requester" type="code"/>
+                </Property>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
+                  <CardConstraints cardName="card7"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+          </SubComponents>
         </Container>
       </SubComponents>
     </Container>
